--- a/config/camera.cfg
+++ b/config/camera.cfg
@@ -4,7 +4,7 @@
 number_of_camera = 1
 
 ;------------------------------------------------------------------------------- 
-; CAMERA_FACING_BACK
+; CAMERA_FACING_FRONT
 ;------------------------------------------------------------------------------- 
 camera_id = 0
 
@@ -12,7 +12,7 @@ camera_id = 0
 ; 1 for CAMERA_FACING_FRONT
 ; 0 for CAMERA_FACING_BACK
 ;------------------------------------------------------------------------------- 
-camera_facing = 0
+camera_facing = 1
 
 ;------------------------------------------------------------------------------- 
 ; driver device name
